login screen WIP, dashboard UI done

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,4 +2,6 @@
 
     <style name="AppTheme" parent="@style/Theme.Sherlock.Light.DarkActionBar"></style>
 
+    <style name="autoMargin"></style>
+
 </resources>
