--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,3 +1,9 @@
 <resources>
 
+    <!--
+     Overrides the default margin since we hae a ton of lists,
+     it makes sense to have lists start/end on the edge
+    -->
+    <dimen name="ed__activity_margin_vertical">0dp</dimen>
+
 </resources>
