--- a/res/layout/list_item_icon.xml
+++ b/res/layout/list_item_icon.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="@dimen/ed__padding_small"
     android:minHeight="48dp"
     android:orientation="horizontal"
+    android:paddingLeft="@dimen/ed__padding_small"
     tools:context=".home.ui.activity.MainActivity" >
 
     <ImageView
