--- a/res/layout/list_item_icon.xml
+++ b/res/layout/list_item_icon.xml
@@ -23,7 +23,9 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center_vertical"
+        android:paddingBottom="@dimen/ed__padding_micro"
         android:paddingLeft="@dimen/ed__padding_small"
+        android:paddingTop="@dimen/ed__padding_micro"
         android:textSize="@dimen/ed__textsize_medium" />
 
     <ImageButton
