--- a/res/layout/list_item_load_more.xml
+++ b/res/layout/list_item_load_more.xml
@@ -7,9 +7,6 @@
         android:id="@android:id/text1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackground"
-        android:clickable="true"
-        android:focusable="true"
         android:gravity="center"
         android:minHeight="48dp"
         android:text="@string/load_more"
@@ -17,10 +14,11 @@
 
     <ProgressBar
         android:id="@android:id/progress"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:indeterminateOnly="true"
-        android:visibility="gone" />
+        android:paddingBottom="@dimen/ed__padding_small"
+        android:paddingTop="@dimen/ed__padding_small" />
 
 </FrameLayout>
