--- a/res/layout/bookmark_frag.xml
+++ b/res/layout/bookmark_frag.xml
@@ -8,14 +8,14 @@
         style="?android:attr/listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/name" />
+        android:text="@string/title" />
 
     <TextView
-        android:id="@+id/lbl_name"
+        android:id="@+id/lbl_title"
         style="@style/selectableTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/name" />
+        android:hint="@string/title" />
 
     <TextView
         style="?android:attr/listSeparatorTextViewStyle"
