--- a/res/menu/bookmark_frag.xml
+++ b/res/menu/bookmark_frag.xml
@@ -6,5 +6,10 @@
         android:icon="@android:drawable/ic_menu_edit"
         android:showAsAction="ifRoom"
         android:title="@string/edit"/>
+    <item
+        android:id="@+id/delete"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:showAsAction="ifRoom"
+        android:title="@string/delete"/>
 
 </menu>
