--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+    <!-- TODO icon -->
     <item
-        android:id="@+id/settings"
-        android:icon="@android:drawable/ic_menu_preferences"
+        android:id="@+id/logout"
         android:showAsAction="never"
-        android:title="@string/settings"/>
+        android:title="@string/logout"/>
 
 </menu>
