--- a/res/layout/folder_new_frag.xml
+++ b/res/layout/folder_new_frag.xml
@@ -11,6 +11,13 @@
         android:text="@string/parent_folder" />
 
     <TextView
+        android:id="@+id/lbl_folder"
+        style="@style/selectableTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/root" />
+
+    <TextView
         style="?android:attr/listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
