--- a/res/layout/doc_frag.xml
+++ b/res/layout/doc_frag.xml
@@ -26,21 +26,6 @@
             style="?android:attr/listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/web_address" />
-
-        <TextView
-            android:id="@+id/lbl_web_address"
-            style="@style/selectableTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autoLink="web"
-            android:hint="@string/web_address"
-            android:linksClickable="false" />
-
-        <TextView
-            style="?android:attr/listSeparatorTextViewStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:text="@string/tags" />
 
         <TextView
@@ -54,14 +39,15 @@
             style="?android:attr/listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/note" />
+            android:text="@string/doc" />
 
         <TextView
-            android:id="@+id/lbl_note"
+            android:id="@+id/lbl_doc"
             style="@style/listItemTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/note" />
+            android:hint="@string/doc"
+            android:minLines="8" />
     </LinearLayout>
 
 </ScrollView>
