--- a/res/layout/list_item_icon_2.xml
+++ b/res/layout/list_item_icon_2.xml
@@ -24,7 +24,7 @@
         android:layout_height="match_parent"
         android:maxWidth="48dp"
         android:scaleType="centerInside"
-        android:src="@drawable/ic_launcher"
+        android:src="@drawable/ic_folder"
         tools:ignore="ContentDescription" />
 
     <TextView
