--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -9,14 +9,25 @@
         <item name="android:layout_marginTop">@dimen/ed__padding_small</item>
     </style>
 
-    <style name="selectableTextView">
-        <item name="android:background">?attr/selectableItemBackground</item>
+    <style name="listItemTextView">
         <item name="android:gravity">center_vertical</item>
         <item name="android:minHeight">48dp</item>
         <item name="android:padding">@dimen/ed__padding_small</item>
         <item name="android:textSize">@dimen/ed__textsize_medium</item>
+    </style>
+
+    <style name="selectableTextView" parent="@style/listItemTextView">
+        <item name="android:background">?attr/selectableItemBackground</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
+    </style>
+
+    <style name="scrollableFrame" parent="android:Widget.Holo.Light.ScrollView">
+        <item name="android:paddingBottom">@dimen/ed__padding_small</item>
+        <item name="android:paddingLeft">@dimen/ed__padding_small</item>
+        <item name="android:paddingRight">@dimen/ed__padding_small</item>
+        <item name="android:paddingTop">@dimen/ed__padding_small</item>
+        <item name="android:scrollbarStyle">outsideOverlay</item>
     </style>
 
 </resources>
