--- a/res/layout/doc_frag.xml
+++ b/res/layout/doc_frag.xml
@@ -23,6 +23,7 @@
             android:hint="@string/title" />
 
         <TextView
+            android:id="@+id/lbl_tags_frame"
             style="?android:attr/listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -36,13 +37,14 @@
             android:hint="@string/tags" />
 
         <TextView
+            android:id="@+id/lbl_note_frame"
             style="?android:attr/listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/doc" />
 
         <TextView
-            android:id="@+id/lbl_doc"
+            android:id="@+id/lbl_note"
             style="@style/listItemTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
