--- a/res/layout/list_item_load_more.xml
+++ b/res/layout/list_item_load_more.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
-
-    <TextView
-        android:id="@android:id/text1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:minHeight="48dp"
-        android:text="@string/load_more"
-        android:textSize="@dimen/ed__textsize_medium" />
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:minHeight="48dp"
+    android:orientation="horizontal" >
 
     <ProgressBar
         android:id="@android:id/progress"
-        style="?android:attr/progressBarStyle"
+        style="?android:attr/progressBarStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:paddingBottom="@dimen/ed__padding_small"
-        android:paddingTop="@dimen/ed__padding_small" />
+        android:paddingRight="@dimen/ed__padding_micro" />
 
-</FrameLayout>
+    <TextView
+        android:id="@android:id/text1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingLeft="@dimen/ed__padding_micro"
+        android:text="@string/loading_more"
+        android:textSize="@dimen/ed__textsize_medium" />
+
+</LinearLayout>
