please see commit comments

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -2,8 +2,10 @@
 
     <!--
      Overrides the default margin since we hae a ton of lists,
-     it makes sense to have lists start/end on the edge
+     it makes sense to have lists start/end on the edge
     -->
     <dimen name="ed__activity_margin_vertical">8dp</dimen>
+    <dimen name="photo_grid_width">99dp</dimen>
+    <dimen name="photo_grid_height">99dp</dimen>
 
 </resources>
