--- a/res/layout/doc_new_frag.xml
+++ b/res/layout/doc_new_frag.xml
@@ -66,8 +66,7 @@
                 android:id="@+id/txt_note"
                 style="@style/formMargin"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:hint="@string/note"
                 android:imeOptions="flagNoExtractUi"
                 android:inputType="textMultiLine"
