--- a/res/layout/list_item_spinner.xml
+++ b/res/layout/list_item_spinner.xml
@@ -8,19 +8,10 @@
     android:paddingLeft="@dimen/ed__padding_small"
     tools:context=".home.ui.activity.MainActivity" >
 
-    <ImageView
-        android:id="@android:id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:maxWidth="48dp"
-        android:scaleType="centerInside"
-        tools:ignore="ContentDescription" />
-
     <TextView
         android:id="@android:id/text1"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:maxLines="1"
@@ -28,16 +19,7 @@
         android:paddingLeft="@dimen/ed__padding_small"
         android:paddingTop="@dimen/ed__padding_micro"
         android:scrollHorizontally="true"
+        android:textAppearance="@style/TextAppearance.Sherlock.Widget.ActionBar.Title"
         android:textSize="@dimen/ed__textsize_medium" />
-
-    <ImageButton
-        android:id="@+id/menu"
-        android:layout_width="32dp"
-        android:layout_height="match_parent"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/more"
-        android:duplicateParentState="false"
-        android:scaleType="fitXY"
-        android:src="@drawable/abs__spinner_ab_holo_light" />
 
 </com.nexuspad.ui.DuplicateParentStateAwareLinearLayout>
