--- a/res/layout/doc_new_frag.xml
+++ b/res/layout/doc_new_frag.xml
@@ -30,37 +30,12 @@
 
             <include layout="@layout/folder_selector_include" />
 
-            <TextView
-                style="?android:attr/listSeparatorTextViewStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/title" />
-
             <EditText
                 android:id="@+id/txt_title"
                 style="@style/formMargin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/title" />
-
-            <TextView
-                style="?android:attr/listSeparatorTextViewStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/tags" />
-
-            <EditText
-                android:id="@+id/txt_tags"
-                style="@style/formMargin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/tags" />
-
-            <TextView
-                style="?android:attr/listSeparatorTextViewStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/note" />
 
             <com.commonsware.cwac.richedit.RichEditText
                 android:id="@+id/txt_note"
@@ -70,7 +45,14 @@
                 android:hint="@string/note"
                 android:imeOptions="flagNoExtractUi"
                 android:inputType="textMultiLine"
-                android:minLines="3" />
+                android:minLines="@integer/notes_min_lines" />
+
+            <EditText
+                android:id="@+id/txt_tags"
+                style="@style/formMargin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/tags" />
         </LinearLayout>
     </FrameLayout>
 
