--- a/res/layout/folder_selector_include.xml
+++ b/res/layout/folder_selector_include.xml
@@ -4,7 +4,7 @@
     style="@style/selectableTextView"
     android:layout_width="match_parent"
     android:layout_height="48dp"
-    android:drawableLeft="@drawable/ic_folder"
+    android:drawableLeft="@drawable/ic_np_folder"
     android:drawablePadding="@dimen/ed__padding_small"
     android:ellipsize="end"
     android:maxLines="1"
