--- a/res/layout/list_item_album.xml
+++ b/res/layout/list_item_album.xml
@@ -2,24 +2,32 @@
 <com.nexuspad.ui.DuplicateParentStateAwareLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:minHeight="48dp"
     android:orientation="horizontal"
     android:paddingLeft="@dimen/ed__padding_small"
     tools:context=".home.ui.activity.MainActivity" >
 
+    <ImageView
+        android:id="@android:id/icon"
+        android:layout_width="@dimen/photo_grid_width"
+        android:layout_height="@dimen/photo_grid_height"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_launcher"
+        tools:ignore="ContentDescription" />
+
     <TextView
         android:id="@android:id/text1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:maxLines="1"
         android:paddingBottom="@dimen/ed__padding_micro"
-        android:paddingLeft="@dimen/ed__padding_micro"
+        android:paddingLeft="@dimen/ed__padding_small"
         android:paddingTop="@dimen/ed__padding_micro"
         android:scrollHorizontally="true"
-        android:textAppearance="@style/TextAppearance.Sherlock.Widget.ActionBar.Title"
         android:textSize="@dimen/ed__textsize_medium" />
 
 </com.nexuspad.ui.DuplicateParentStateAwareLinearLayout>
