--- a/res/layout/albums_frag.xml
+++ b/res/layout/albums_frag.xml
@@ -1,26 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
 
-    <GridView
-        android:id="@+id/grid_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnWidth="101dp"
-        android:drawSelectorOnTop="true"
-        android:horizontalSpacing="1dp"
-        android:listSelector="?attr/selectableItemBackground"
-        android:numColumns="auto_fit"
-        android:scrollbarStyle="outsideOverlay"
-        android:stretchMode="spacingWidthUniform"
-        android:verticalSpacing="1dp"/>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
+    <include layout="@layout/list_content"/>
     <FrameLayout
         android:id="@+id/sticky"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
         android:background="#7F000000">
 
         <TextView
@@ -37,4 +26,4 @@
             android:text="@string/root"
             android:textSize="@dimen/ed__textsize_medium"/>
     </FrameLayout>
-</RelativeLayout>
+</FrameLayout>
