--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -3,7 +3,7 @@
     <style name="AppTheme" parent="@style/Theme.Sherlock.Light.DarkActionBar"/>
 
     <style name="Transparent" parent="@style/Theme.Sherlock">
-        <item name="android:windowNoTitle">true</item>
+        <item name="windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
