--- a/res/layout/list_content_sticky.xml
+++ b/res/layout/list_content_sticky.xml
@@ -21,7 +21,7 @@
         android:layout_height="match_parent"
         android:visibility="gone" >
 
-        <ListView
+        <com.emilsjolander.components.stickylistheaders.StickyListHeadersListView
             android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
