--- a/res/layout/bookmark_new_frag.xml
+++ b/res/layout/bookmark_new_frag.xml
@@ -40,6 +40,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:hint="@string/note"
+            android:gravity="top"
             android:minLines="@integer/notes_min_lines"/>
     </LinearLayout>
 
