--- a/res/layout/doc_new_frag.xml
+++ b/res/layout/doc_new_frag.xml
@@ -33,6 +33,7 @@
             android:hint="@string/note"
             android:imeOptions="flagNoExtractUi"
             android:inputType="textMultiLine"
+            android:gravity="top"
             android:minLines="@integer/notes_min_lines"/>
 
         <EditText
