--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,13 +1,6 @@
 <resources>
 
-    <!--
-     Overrides the default margin since we hae a ton of lists,
-     it makes sense to have lists start/end on the edge
-
-
-
-
-    -->
+    <dimen name="magic_length">48dp</dimen>
     <dimen name="ed__activity_margin_vertical">8dp</dimen>
     <dimen name="photo_grid_width">99dp</dimen>
     <dimen name="photo_grid_height">99dp</dimen>
