added alphabet fast scroll preview (drag from the right); color bug on <3.0

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,6 +2,10 @@
 
     <style name="AppTheme" parent="@style/Theme.Sherlock.Light.DarkActionBar"/>
 
+    <style name="FastscrollThemedListView" parent="@style/AppTheme">
+        <item name="android:textColorPrimary">?android:textColorPrimaryInverse</item>
+    </style>
+
     <style name="Transparent" parent="@style/Theme.Sherlock">
         <item name="windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">true</item>
