--- a/res/layout/list_content_sticky.xml
+++ b/res/layout/list_content_sticky.xml
@@ -22,6 +22,7 @@
         android:visibility="gone" >
 
         <com.emilsjolander.components.stickylistheaders.StickyListHeadersListView
+            style="@style/FastscrollThemedListView"
             android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
