--- a/res/layout/list_header.xml
+++ b/res/layout/list_header.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.nexuspad.ui.DuplicateParentStateAwareLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.nexuspad.ui.view.DuplicateParentStateAwareLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -9,4 +9,4 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-</com.nexuspad.ui.DuplicateParentStateAwareLinearLayout>
+</com.nexuspad.ui.view.DuplicateParentStateAwareLinearLayout>
