--- a/res/layout/list_item_upload_photo.xml
+++ b/res/layout/list_item_upload_photo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.nexuspad.ui.DuplicateParentStateAwareLinearLayout
+<com.nexuspad.ui.view.DuplicateParentStateAwareLinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -70,4 +70,4 @@
         android:scaleType="fitXY"
         android:src="@drawable/abs__spinner_ab_holo_light"/>
 
-</com.nexuspad.ui.DuplicateParentStateAwareLinearLayout>
+</com.nexuspad.ui.view.DuplicateParentStateAwareLinearLayout>
